--- a/Missing_Values_learning_python.ipynb
+++ b/Missing_Values_learning_python.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/carloscarvajal1cc/UTS_MachineLearning_Assigment2/blob/master/Missing_Values_learning_python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/carloscarvajal1cc/UTS_MachineLearning_Assigment2/blob/Edits/Missing_Values_learning_python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -33,6 +33,9 @@
         "colab": {}
       },
       "source": [
+        "### adidng a change\n",
+        "\n",
+        "\n",
         "## Treating missing values"
       ],
       "execution_count": 0,
