--- a/Assigment2_MachineLearning.ipynb
+++ b/Assigment2_MachineLearning.ipynb
@@ -34,7 +34,15 @@
         "colab_type": "text"
       },
       "source": [
-        "# Assignment 2: titulo aqui\n",
+        "# Assignment 2: Skin Cancer\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -51,30 +59,9 @@
         "<br>32513 Machine Learning Spring 2019\n",
         "<br>By Carlos Mario Carvajal Moreno. Student ID: 13144148\n",
         "<br>and Andres Felipe Lagos Rodriguez. Student ID: 13092248\n",
-        "    \n",
-        "\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "727hPmhVDP0D",
-        "colab_type": "text"
-      },
-      "source": [
-        "# Abstract\n",
-        "\n",
-        "\n",
-        "\n",
-        "<p align=\"justify\"> \n",
-        "\n",
-        "---\n",
-        "### index \n",
-        "\n",
-        "\n",
-        "---\n",
-        "\n"
+        "<br>[link text](https://github.com/carloscarvajal1cc/UTS_MachineLearning_Assigment2)\n",
+        "<br> Or\n",
+        "<br>  https://github.com/carloscarvajal1cc/UTS_MachineLearning_Assigment2 \n"
       ]
     },
     {
@@ -121,8 +108,15 @@
       },
       "source": [
         "# III. Methodology\n",
-        "<br>\n",
-        "<p align=\"justify\"> Implement algorithms; build and train data models (300 words)"
+        "<br><p align=\"justify\"> The training set was then split into 70% training and 30% validation for all the models except for the CNN. The Test set (660 images) was used as the test set to perform an unbiased evaluation of the final classifiers trained with the training set after adjusting parameters based on the validation test results. \n",
+        "\n",
+        "<br><p align=\"justify\">As mentioned in the previous section, the first classifier to train was a simple decision tree, with no optimization or data transformation. This was performed in the “A simple classifier” section and time was measured to report the efficiency of the algorithm. Subsequently, we used PCA in order to improve the efficiency of the classifiers and evaluate the effect of dimensionality reduction on the images in the performance of the algorithms. Thus, Decision Tree, Support Vector Machine and Random Forest were trained with parameter optimization in the section PCA. Additionally, bagging was introduced to reduce the variance and avoid overfitting in the classifiers. Once all the classifiers were trained, we performed an assemble method to improve the predictions, by getting the different classifiers to vote and metrics such as ROC and AUC were applied to compare their performance. \n",
+        "\n",
+        "<br><p align=\"justify\">Afterwards, a final evaluation of the assemble classifier containing the approach was performed with unseen data contained in the testing set that was initially put aside for this purpose. It was necessary to reshape the size of the array to be able to perform PCA on it and evaluate it in the trained model. \n",
+        "\n",
+        "<br><p align=\"justify\">Finally, it was considered necessary to include all the inputs features of the images, as skin cancer is reflected in color variation. Therefore, as concluded that reducing the features affects the performance of the classifiers, it was decided to apply Convolutional Neural Network with the full input, taking advantage of the power of GPUs, pytorch and tensors. This enabled us to present a solution to the problem of efficiency by imputing all the image features without reductions, which are considered as highly important for skin cancer detection. \n",
+        "\n",
+        "<br><p align=\"justify\">For a detailed description of the methodology the report contains section VIII. called Experimenting and Implementation Section, with subsections that describe the whole process.\n"
       ]
     },
     {
@@ -1798,7 +1792,7 @@
         "colab_type": "text"
       },
       "source": [
-        "The following section will train a random forest classifier, by applying ..."
+        "The following section will train a random forest classifier. As random forest classifiers tend to overfit, bagging will be applied to reduce the variance and reduce the level of explanation of the entire training set by the model. Parameter will be optimized to find the best number of trees and their depth."
       ]
     },
     {
